# stock-predict

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  Pipfile  docker-compose.yml  pyproject.toml
config/: settings.py  weights.yaml
deploy/: README.md  nginx.stockpredict.example.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  i18n.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AIAnalysis.tsx  AnalyzePage.tsx  AuthPage.tsx  Dashboard.tsx  FundamentalsPanel.tsx  HistoryList.tsx  HomePage.tsx  LLMSettingsMenu.tsx  LLMSettingsPanel.tsx  MetricExplanationBody.tsx  MetricExplanationDialog.tsx  NewsPanel.tsx  PriceChart.tsx  ProgressBar.tsx  ScoreCard.tsx  SignalTable.tsx  TickerInput.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useIsMobile.ts  useLLMSettings.ts
frontend/src/lib/: termExplanations.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: run_project.py  smoke_ibkr.py  start.sh
src/stockpredict/: __main__.py  cli.py  pipeline.py  types.py
src/stockpredict/ai/: analyzer.py  prompts.py  providers.py
src/stockpredict/analysis/: base.py  long_term.py  medium_term.py  options_outlook.py  short_term.py
src/stockpredict/api/: app.py  deps.py  security.py
src/stockpredict/data/: cache.py  finnhub_client.py  fred_client.py  ibkr_client.py  options_client.py  yfinance_client.py
tests/: test_analyze_ai_config.py  test_multitenancy_crud.py  test_news_sentiment.py
(+18 files in other folders)
